--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "files.associations": {
-        "mailbox.h": "c",
-        "mailboxproperty.h": "c"
-    }
+    "editor.fontFamily": "'NanumGothicCoding', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "editor.fontSize": 15
 }
